--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
 * {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -24,7 +24,7 @@ body {
   margin: 0 auto;
 }
 .header__container {
-  height: 119px;
+  height: 90px;
   padding: 0 15px;
   box-sizing: content-box;
   display: flex;
@@ -134,7 +134,7 @@ body {
 }
 .intro__logo__listen-icon {
   font-family: "DM Sans";
-  font-size: 0.9375rem;
+  font-size: 1rem;
   line-height: 160%;
   margin-bottom: 16px;
 }
@@ -143,7 +143,7 @@ body {
   text-decoration: none;
 }
 
-@media (max-width: 1250px) {
+@media (max-width: 1249.99px) {
   .intro__content {
     max-width: 400px;
     margin: 234px 0px 0px 30px;
@@ -178,8 +178,9 @@ body {
   .intro__image {
     display: flex;
     justify-content: center;
-    max-width: 545px;
+    min-width: 100%;
     max-height: 728px;
+    object-fit: cover;
     opacity: 0.33;
   }
   .intro__content {
@@ -188,15 +189,12 @@ body {
     left: 18%;
     margin: 60px auto 0 auto;
   }
+  .intro__text {
+    margin-bottom: 150px;
+  }
   .intro__block__listen-icon {
     margin-left: 75px;
     text-align: left;
-  }
-  .intro__logo__listen-icon {
-    font-family: "DM Sans";
-    font-size: 0.9375rem;
-    line-height: 160%;
-    margin-bottom: 16px;
   }
   .intro__link__listen-icon {
     margin-right: 17px;
@@ -235,7 +233,7 @@ body {
     max-width: 390px;
   }
   .intro__text {
-    font-size: 25px;
+    font-size: 32px;
   }
   .intro__block__listen-icon {
     margin-left: 75px;
@@ -273,18 +271,19 @@ body {
     padding: 0px 20px;
   }
   .intro__text {
-    font-size: 18px;
+    font-size: 26px;
+    margin-bottom: 80px;
   }
   .intro__block__listen-icon {
-    margin-left: 55px;
+    margin-left: 45px;
     text-align: left;
   }
   .intro__logo__listen-icon {
-    font-size: 0.625rem;
+    font-size: 1rem;
   }
   .intro__image__listen-icon {
-    max-width: 18px;
-    max-height: 18px;
+    max-width: 20px;
+    max-height: 20px;
   }
 }
 /*episodes*/
@@ -306,7 +305,7 @@ body {
   align-self: flex-start;
   font-family: "DM Sans";
   font-size: 64px;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 123.4375%;
   letter-spacing: 2.88px;
 }
@@ -316,7 +315,10 @@ body {
   padding: 40px;
   margin-bottom: 60px;
   display: flex;
-  flex-direction: row;
+}
+.episodes__labels-block {
+  display: inline-flex;
+  flex-direction: column;
 }
 .episodes__image {
   margin-right: 53px;
@@ -326,7 +328,8 @@ body {
   font-size: 18px;
   border-radius: 6px;
   background-color: #191919;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
   margin-bottom: 48px;
 }
 .episodes__over-title {
@@ -336,7 +339,7 @@ body {
   margin-bottom: 18px;
 }
 .episodes__content-title {
-  font-weight: 400;
+  font-weight: 500;
   font-size: 64px;
   line-height: 109.375%;
   letter-spacing: 1px;
@@ -350,6 +353,7 @@ body {
 }
 
 .buttons-link {
+  display: inline-block;
   padding: 12px 20px;
   color: #fff;
   background-color: #118DA8;
@@ -363,6 +367,109 @@ body {
 .buttons-link:hover {
   color: rgba(222, 222, 222, 0.7529411765);
   background-color: rgba(15, 124, 148, 0.8156862745);
+}
+
+@media (max-width: 969.99px) {
+  .buttons-link {
+    padding: 10px 19px;
+    color: #fff;
+    background-color: #118DA8;
+    border-radius: 6px;
+    text-decoration: none;
+    font-family: "DM Sans";
+    transition: all 0.4s ease;
+    font-size: 16px;
+    line-height: 158.8235294118%;
+  }
+  .buttons-link:hover {
+    color: rgba(222, 222, 222, 0.7529411765);
+    background-color: rgba(15, 124, 148, 0.8156862745);
+  }
+}
+@media (max-width: 1249.99px) {
+  .episodes__content-title {
+    font-size: 48px;
+  }
+  .episodes__description {
+    font-size: 18px;
+  }
+  .episodes__image {
+    max-height: 382px;
+    max-width: 414px;
+    margin-right: 43px;
+  }
+}
+@media (max-width: 969.99px) {
+  .episodes__title {
+    font-size: 48px;
+    display: flex;
+    align-self: center;
+  }
+  .episodes__cards-container__box {
+    padding: 30px;
+  }
+  .episodes__image {
+    margin-right: 30px;
+  }
+  .episodes__tablet {
+    padding: 4px 14px;
+    font-size: 16px;
+    margin-bottom: 38px;
+  }
+  .episodes__over-title {
+    font-size: 16px;
+  }
+  .episodes__content-title {
+    font-size: 42px;
+  }
+  .episodes__description {
+    font-size: 16px;
+  }
+}
+@media (max-width: 767.98px) {
+  .episodes__title {
+    font-size: 32px;
+  }
+  .episodes__cards-container__box {
+    padding: 20px;
+    margin-bottom: 35px;
+    display: flex;
+    flex-direction: column;
+  }
+  .episodes__image {
+    min-width: 100%;
+    min-height: 300px;
+    object-fit: cover;
+    margin-bottom: 30px;
+  }
+  .episodes__labels-block {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    margin-bottom: 20px;
+  }
+  .episodes__tablet {
+    margin: 0;
+  }
+  .episodes__over-title {
+    margin: 0;
+  }
+  .episodes__content-title {
+    font-size: 26px;
+    margin-bottom: 14px;
+  }
+}
+@media (max-width: 497.98px) {
+  .episodes__container {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .episodes__title {
+    align-self: flex-start;
+  }
+  .episodes__content-title {
+    font-size: 20px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
